--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,16 @@
   "name": "LionBlock",
   "description": "AdBusters first extension",
   "version": "1.0",
-
+  "background": {
+    "scripts": ["js/blocker.js"]
+  },
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
   "permissions": [
     "activeTab",
-    "https://ajax.googleapis.com/"
+    "WebRequest",
+    "tabs"
   ]
 }
