--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,10 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
+  "icons": {"16":"icon16.png",
+            "48":"icon48.png",
+            "128": "icon128.png"
+  },
   "permissions": [
     "storage",
     "webRequest",
