--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "LionBlock",
   "description": "Adblocking simplified: A low-profile, independent ad blocker for the masses.",
-  "version": "1.1",
+  "version": "1.2",
   "background": {
     "scripts": ["js/blocker.bundle.js"]
   },
@@ -11,9 +11,10 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
-  "icons": {"16":"icon16.png",
-            "48":"icon48.png",
-            "128": "icon128.png"
+  "icons": {
+    "16":"icon16.png",
+    "48":"icon48.png",
+    "128": "icon128.png"
   },
   "permissions": [
     "storage",
